trying to make testfile work