@@ -34,7 +34,7 @@ public class TechJobsTest {
 
     private static String getFileContents(String fileName) throws IOException {
         Path path = FileSystems.getDefault().getPath(fileName);
-        return Files.readString(path);
+        return new String(Files.readAllBytes( path ));
     }
 
     @Test
